# LLM-from-scratch

./: pyproject.toml
notebooks/: micrograd_from_scratch.ipynb
