[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = ["Izam Mohammed <izamdeveloper1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
graphviz = "^0.20.3"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
